<resources>
    <string name="app_name">MyMoney</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="currency_exchange">Currency Exchange</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="money">Money</string>
    <string name="type">Type</string>
    <string name="sport">Sport</string>
    <string name="supermarket">Supermarket</string>
    <string name="clothes">Clothes</string>
    <string name="my_money">My Money</string>
    <string name="done">Done</string>
    <string name="transport">Transport</string>
    <string name="eat_outside">Eat Outside</string>
    <string name="car">Car</string>
    <string name="taxi">Taxi</string>
    <string name="communal_payments">Communal payments</string>
    <string name="smoking">Smoking</string>
    <string name="subscription">Subscription</string>
    <string name="presents">Presents</string>
    <string name="cards">Cards</string>
    <string name="time">Time</string>
    <string name="for_last_week">For last week</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="Week">This Week</string>
    <string name="month">This Month</string>
    <string name="year">This Year</string>
    <string name="sort">Sort</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="statics">Statics</string>
    <string name="week_statistics">Week</string>
    <string name="month_statistics">Month</string>
    <string name="year_statistics">Year</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
</resources>