<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.BottomSheetFragment">

        <TextView
            android:id="@+id/textViewSpendType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/scrollViewSpendType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSpendType">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/spendTypeChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:checkedChip="@+id/supermarketChip">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/supermarketChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/supermarket"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/transportChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transport"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/eatOutside"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eat_outside"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sportChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sport"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/carChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/taxiChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taxi"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/clothesChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clothes"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/communalChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/communal_payments"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/smokingChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoking"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/subscriptionChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subscription"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/presentsChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/presents"
                        android:textSize="16sp" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/valueTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:text="0"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewSpendType" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:columnCount="3"
            android:foregroundGravity="center"
            android:rowCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueTextView">

            <Button
                android:id="@+id/btn1"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="7"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="8"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="9"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDel"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="Del"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="20sp"
                app:icon="@drawable/ic_delete"
                app:iconPadding="1dp"
                app:iconTint="@color/black" />

            <!--            <Button-->
            <!--                android:id="@+id/btnDelete"-->
            <!--                android:text="Del"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="20sp"-->
            <!--                android:textStyle="bold"-->
            <!--                android:textAllCaps="false"-->
            <!--                android:layout_margin="10dp"/>-->

            <Button
                android:id="@+id/btn0"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="90dp"
                android:layout_margin="10dp"
                android:height="50dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="Done"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="20sp" />


        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>